# sync

./: LICENSE  README.md  Sync.hs  sync.cabal
Sync/: Common.hs  Config.hs  DirWatch.hs  Events.hs  Export.hs  RSync.hs
