Name:                sync
Version:             0.1
Description:
  Keep directories on two different machines synchronized using rsync.
License:             BSD3
License-file:        LICENSE
Author:              Kevin Morgan
Maintainer:          kevinm416@gmail.com
Category:            System
Build-type:          Simple
Cabal-version:       >=1.2

executable sync
  main-is: Sync.hs
  Build-Depends: base,
                 configurator,
                 containers,
                 directory,
                 filepath,
                 hinotify,
                 hslogger,
                 mtl,
                 optparse-applicative,
                 process,
                 shelly,
                 transformers,
                 text,
                 unix